fix h1 overlay on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -520,6 +520,7 @@ footer p {
 
 .main-container h1 {
   margin: 20px;
+  z-index: -1;
 }
 
 .main-container p {
